src/styles.css
/* ... */
.projects-Pages p{
    padding:0 105px;
}
.projects-Pages-content p::first-letter{
    font-size: 2rem;
    color: red;
    font-weight: bold;
    letter-spacing: 4px;
}
.project-Pages-Photos-Container{
    padding: 0 105px;
    text-align: center;
}
.project-Pages-Photos-Container img{
    height:400px;
    margin: 70px 20px;
    max-width: 400px;
}
.project-Pages-Photos-Container video{
    height:300px;
    width:100%;
    margin-top:70px;
}
/* MOBILE VIEW */
@media (max-width:1150px) {
    .footerr {
        display: flex;
        justify-content: center;
        text-align: center;
    }

    .footerNav ul {
        flex-direction: column;
    }

    .footerNav ul li {
        width: 100%;
        text-align: center;
        margin: 10px 0;
    }
    .header-text h1 {
        font-size: 55px;
        margin-top: 0;
        margin-bottom: 0;
        padding:0;
        justify-content: center;
        letter-spacing: 9px;
    }
    .header-text h2 {
        font-size: 18px;
    }
    .profile-image {
        width:120px;
    }
    .desc-container {
        padding: 0 65px;
    }
    .mycontacts-icons{
        gap:20px;
    }
    .timeline {
        width: 80vw;
    }

    .timeline .checkpoint {
        width: 100%;
        transform: none;
        padding-left: 0;
        padding-right: 0;
        border: none;
    }

    .timeline .checkpoint::before {
        width: 3px;
        height: 4em;
        top: -2em;
        left: 50%;
        transform: translateX(-50%);
    }

    .timeline .checkpoint div::before {
        top: -0.5em;
        left: 50%;
        transform: translateX(-50%);
    }
    .projects-Pages p{
        padding:0 30px;
    }
    .project-Pages-Photos-Container{
        padding: 0;
        align-items: center;
        justify-content: center;
    }
}

